2000-06-21  Dave Peticolas  <dave@krondo.com>

	* src/optional/swig/Makefile.am (gnucash-engine-perl5_wrap.c):
	remove the -stat argument, it's no longer support in later swig
	versions.

	* src/register/Makefile.am: don't compile table-html.c, it is
	not needed for linking.

	* src/gnome/window-register.c: remove include of table-html.c

	* src/engine/gnc-common.h: use 'gboolean' to typedef gncBoolean.
	We should probably just phase out the use of gncBoolean.

2000-06-20  Dave Peticolas  <dave@krondo.com>

	* src/engine/util.c (xaccParseAmount): accept 8 decimal places
	instead of 6, and trucate if more than 8.

	* src/gnome/dialog-add.c: make this window modeless.
	(gnc_ui_accWindow_ok_cb): don't let the user add an account with
	the same fully-qualified name as another account.

	* src/gnome/top-level.c (gnc_ui_destroy_all_subwindows): destroy
	all the account add windows, too.

	* src/gnome/window-main.c (gnc_refresh_main_window_title): new
	function to put the current filename in the main window title.
	(gnc_refresh_main_window): use the above when refreshing.

	* src/FileDialog.c (gncFileSaveAs): refresh the main window after
	'saving as' to update the filename in the main window.

2000-06-19  Dave Peticolas  <dave@krondo.com>

	* src/guile/gnc.gwp: take out GUIDs for Groups.

	* src/engine/Group.c: take out GUIDs for Groups. Groups are really
	just lists with no additional structure, and giving them GUIDs
	complicates matters without adding any utility. You can always use
	the parent account GUID instead.

	* src/gnome/top-level.c: configure list auto-popping from here.

	* src/register/gnome/combocell-gnome.c: determine whether or not
	to auto-pop lists based on a class variable, and not by looking
	up the guile function. This removes a src/guile dependency from
	src/register/gnome.

2000-06-14  Dave Peticolas  <dave@krondo.com>

	* src/register/gnome/gnucash-item-edit.c (item_edit_show_list):